# web-server-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  print-rainbow.sh  unix-genprojects.sh  windows-genprojects-dev.bat  windows-genprojects.bat
.github/workflows/: build.yml
api-standard/: CMakeLists.txt
api-standard/include/: api-standard.h  avatar.h  login.h  message.h  setting.h  status.h  user.h
api-standard/src/: avatar.cpp  login.cpp  message.cpp  setting.cpp  status.cpp  user.cpp
client/: CMakeLists.txt
client/src/: main.cpp
gui-client/: CMakeLists.txt
gui-client/src/: application.cpp  application.h  image.cpp  image.h  main.cpp  panel.cpp  panel.h  util.cpp  util.h
gui-client/src/panels/: chat_panel.cpp  chat_panel.h  devmenu.cpp  devmenu.h  login_panel.cpp  login_panel.h  settings_panel.cpp  settings_panel.h
server/: CMakeLists.txt
server/src/: handlers.h  log.cpp  log.h  main.cpp  message_handler.cpp  message_handlers.cpp  user_handlers.cpp  userdatabase.cpp  userdatabase.h
