cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
project("web-server-test")
set(BUILD_CLIENTS_DEFAULT ON)
if(UNIX AND NOT APPLE)
    set(BUILD_CLIENTS_DEFAULT OFF)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-narrowing")
endif()
option(WST_BUILD_CLIENTS ${BUILD_CLIENTS_DEFAULT})
add_subdirectory("vendor/restbed")
add_subdirectory("vendor/libbcrypt")
add_subdirectory("api-standard")
add_subdirectory("server")
if(WST_BUILD_CLIENTS)
    add_subdirectory("vendor/curl")
    add_subdirectory("vendor/glfw")
    add_subdirectory("vendor/glad")
    add_subdirectory("client")
    add_subdirectory("gui-client")
endif()