cmake_minimum_required(VERSION 3.15.4 FATAL_ERROR)
if(UNIX AND NOT APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
endif()
include_directories(SYSTEM "../vendor/curl/include" "../vendor/json/include" "../api-standard/include" "../vendor/glfw/include" "../vendor/glad/include" "../vendor/imgui")
file(GLOB_RECURSE CPP_SOURCE_FILES "src/*.cpp")
file(GLOB_RECURSE PRIVATE_HEADER_FILES "src/*.h")
file(GLOB IMGUI_SOURCE_FILES "../vendor/imgui/*.cpp")
file(GLOB IMGUI_HEADER_FILES "../vendor/imgui/*.h")
file(GLOB IMGUI_OPENGL_BACKEND "../vendor/imgui/backends/imgui_impl_opengl3.*")
file(GLOB IMGUI_GLFW_BACKEND "../vendor/imgui/backends/imgui_impl_glfw.*")
set(IMGUI_SOURCE ${IMGUI_SOURCE_FILES} ${IMGUI_HEADER_FILES} ${IMGUI_OPENGL_BACKEND} ${IMGUI_GLFW_BACKEND})
add_executable(gui-client ${CPP_SOURCE_FILES} ${PRIVATE_HEADER_FILES} ${IMGUI_SOURCE})
target_link_libraries(gui-client libcurl api-standard glfw glad)
set_property(TARGET gui-client PROPERTY CXX_STANDARD 17)
