cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
include_directories(SYSTEM "../vendor/restbed/source" "../vendor/json/include" "../api-standard/include" "../vendor/cpp-base64" "../vendor/libbcrypt/include")
if(UNIX)
    add_compile_definitions(SYSTEM_UNIX)
    if(NOT APPLE)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pthread")
    endif()
endif()
file(GLOB_RECURSE CPP_SOURCE_FILES "src/*.cpp")
file(GLOB_RECURSE PRIVATE_HEADER_FILES "src/*.h")
file(GLOB BASE64_PARSER_CODE "../vendor/cpp-base64/base64.*")
add_executable(server ${CPP_SOURCE_FILES} ${PRIVATE_HEADER_FILES} ${BASE64_PARSER_CODE})
if(WIN32)
    add_custom_command(TARGET server POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:restbed-shared>/restbed-shared.dll" $<TARGET_FILE_DIR:server>)
    set(RESTBED_LIB "restbed-shared")
else()
    set(RESTBED_LIB "restbed-static")
endif()
target_link_libraries(server ${RESTBED_LIB} api-standard bcrypt)
set_property(TARGET server PROPERTY CXX_STANDARD 17)
